# flashcards

./: Cargo.toml  Makefile
src/: basic_draw.rs  main.rs
