[package]
name = "flashcards"
version = "0.1.0"
edition = "2021"

[dependencies]
libremarkable = {path = "/home/jared/packages/libremarkable"}

log = "0.4.14"
env_logger = "0.9.0"
once_cell = "1.9.0"
atomic = "0.5.1"
cgmath = "0.18.0"
libc = "0.2.69"
chrono = "0.4.19"

# framebuffer
memmap2 = { version = "0.5.2", optional = true }
ioctl-gen = { version = "0.1.1", optional = true }
zstd = { version = "0.9.0", optional = true }

# framebuffer-drawing
rusttype = { version = "0.9.2", optional = true }
image = { version = "0.23.14", optional = true }
line_drawing = { version = "1.0.0", optional = true }

# input
evdev = { version = "0.11.3", optional = true }
epoll = { version = "4.3.1", optional = true }
fxhash = { version = "0.2.1", optional = true }

# appctx
aabb-quadtree = { version = "0.1.0", optional = true }

# hlua
hlua = { version = "0.4.1", optional = true }

# runtime benchmarking
stopwatch = { version = "0.0.7", optional = true }

#chrono = {version = "0.4.19", optional = true}
